fix overflow

--- a/index.css
+++ b/index.css
@@ -719,6 +719,12 @@ section {
   outline: none;
   border-color: #ffb703;
 } */
+/******************RECENT ARTICLES SECTION STYLING***********************/
+.col-lg-4 .card {
+  background-color: transparent;
+  text-align: center;
+  color:white;
+}
 
 /*******************************GET INVOLVED SECTION STYLING*******************/
 .card {
@@ -955,19 +961,14 @@ body {
 
 /******************FOOTER STYLING***************/
 footer {
-  width: 100%;
-  background: #343c66;
-}
-/* footer {
   margin-top: 10vh;
   position: relative;
   background: #343c66;
   width: 100%;
-  height: 200px;
   bottom: 0;
   left: 0;
-  border: 1px solid aqua;
 }
+
 footer::before {
   content: "";
   position: absolute;
@@ -976,7 +977,8 @@ footer::before {
   height: 1px;
   width: 100%;
   background: #afafb6;
-} */
+}
+
 footer .content {
   max-width: 1250px;
   margin: auto;
